terraform/plan/s3-best-practices/enable-s3-versioning/test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: good-test
spec:
  steps:
    - name: kyverno
      try:
      - script:
          content: |
            set -e
            kyverno apply ../s3-enable-versioning.yaml --json './good-payload.json'
          check: 
            "(contains($stdout, 'pass: 1, fail: 0, warn: 0, error: 0, skip: 0'))": true
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test-01
spec:
  steps:
    - name: kyverno
      try:
      - script:
          content: |
            set -e
            kyverno apply ../s3-enable-versioning.yaml --json './bad-payload-01.json'
          check: 
            "(contains($stdout, 'pass: 0, fail: 1, warn: 0, error: 0, skip: 0'))": true
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test-02
spec:
  steps:
    - name: kyverno
      try:
      - script:
          content: |
            set -e
            kyverno apply ../s3-enable-versioning.yaml --json './bad-payload-02.json'
          check: 
            "(contains($stdout, 'pass: 0, fail: 1, warn: 0, error: 0, skip: 0'))": true
